* fixed height of result box elements when navigation by keyboard  * aligned subwidgets  * changed colors to better match KARL

--- a/sl/livesearch/demo.css
+++ b/sl/livesearch/demo.css
@@ -4,8 +4,15 @@ body {
     font-family: "Trebuchet MS", "Helvetica", "Arial",  "Verdana", "sans-serif";
 }
 
-.ui-ls-menu {
-    margin-right: 10px;
+.ui-state-default,
+.ui-widget-content .ui-state-default,
+.ui-widget-header .ui-state-default {
+    background-image: url("ui-bg_glass_75_f0f2f4_1x400.png");
+}
+
+.ui-widget-content,
+.ui-widget-content a {
+    color: #333333;
 }
 
 .ui-autocomplete-category {
@@ -13,7 +20,7 @@ body {
     padding: 6px 364px 0 0;
     margin: 4px 0 0 -102px;
     line-height: 1.5;
-    border-top: solid #999999 1px;
+    border-top: solid #a3a3a3 1px;
     text-align: right;
     height: 0px;
 }
@@ -25,12 +32,6 @@ body {
     border-radius: 4px 0px 0px 4px;
 }
 
-.ui-ls-autocomplete {
-    padding: 0;
-    margin: 0 -10px 0 0;
-    border: solid 1px #eeeeee;
-}
-
 .ui-ls-autocomplete-first {
     border: none;
 }
@@ -40,10 +41,7 @@ body {
     padding-left: 104px;
     background: #ffffff url(livesearch_bg.gif) repeat-y top left;
     font-size: .7em;
-}
-
-.ui-ls-gobtn {
-    border-radius: 0px 4px 4px 0px;
+    border-color: #a3a3a3;
 }
 
 
@@ -68,6 +66,27 @@ body {
     font-size: 10px;
 }
 
+.bc-header-toolbox .ui-ls-menu {
+    -moz-border-radius: 4px 0 0 4px;
+    border-radius: 4px 0 0 4px;
+    border-color: #cecece;
+}
+
+.bc-header-toolbox .ui-ls-autocomplete {
+    border-width: 1px 0;
+    border-color: #cecece;
+    border-style: solid;
+    *line-height: 14px;
+    padding: 0;
+    margin: 0 -1px 0 0;
+}
+
+.bc-header-toolbox .ui-ls-gobtn {
+    -moz-border-radius: 0 4px 4px 0;
+    border-radius: 0 4px 4px 0;
+    border-color: #cecece;
+}
+
 .bc-content-frame {
     margin: 2em;
 }
@@ -76,7 +95,8 @@ body {
     border: 1px solid #ffffff;
 }
 
-.ui-menu .ui-menu-item a:hover {
+.ui-menu .ui-menu-item a:hover,
+.ui-menu .ui-menu-item a.ui-state-hover {
     margin: 0;
     border: 1px solid #999999;
     background: #e1e1e1 url('../images/ui-bg_glass_75_dadada_1x400.png') repeat-x scroll 50% 50%;
